--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,10 @@ footer p{
     background-position: center;
     background-repeat: no-repeat;
 }
+.thumbnail-2 h3{
+    text-decoration: underline;
+    text-decoration-color: #407d9e;
+}
 
 /* SINGLE A */
 
@@ -142,7 +146,6 @@ footer p{
 	height: auto;
 	width: 100%;
 }
-
 .container-a{
 	padding: 75px;
 }
@@ -177,8 +180,10 @@ footer p{
 	background-color: #1c5a7b;
 }
 #lista-menu ul, #lista-menu-2 ul{
-	margin-top: 10px;
-	margin-left: 103px;
+	margin-left: 123px;
+    margin-bottom: 0px;
+    height: 40px;
+    padding-top: 7px;
 }
 #lista-menu ul li, #lista-menu-2 ul li{
 	list-style-type: none;
@@ -198,6 +203,15 @@ footer p{
 .w-100 {
     width: 50% !important;
     margin: 0 auto;
+}
+.thumbnail-2{
+	background-color: #cccccc !important;
+}
+.container-2{
+	padding: 65px;
+}
+.carousel {
+    background-color: black;
 }
 
 
