arreglando paginas nuevas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,6 @@ footer p{
 
 #navbar-1 .contenido_header .datos-contacto{
 	position: absolute;
-    background-color: #407d9e;
     color: white;
     border-radius: 5px;
     padding-left: 35px;
@@ -177,23 +176,23 @@ footer p{
 #lista-menu, #lista-menu-2, #lista-menu-7, #lista-menu-8{
 	background-color: #144159;
 }
-#lista-menu-3, #lista-menu-4, #lista-menu-5, #lista-menu-6{
+#lista-menu-3, #lista-menu-4, #lista-menu-5, #lista-menu-6, #lista-menu-9{
 	background-color: #1c5a7b;
 }
 
-#lista-menu ul, #lista-menu-2 ul, #lista-menu-3 ul, #lista-menu-4 ul, #lista-menu-5 ul, #lista-menu-6 ul, #lista-menu-7 ul, #lista-menu-8 ul{
+#lista-menu ul, #lista-menu-2 ul, #lista-menu-3 ul, #lista-menu-4 ul, #lista-menu-5 ul, #lista-menu-6 ul, #lista-menu-7 ul, #lista-menu-8 ul, #lista-menu-9 ul{
 	margin-left: 13%;
     margin-bottom: 0px;
     height: 40px;
     padding-top: 7px;
 }
-#lista-menu ul li, #lista-menu-2 ul li, #lista-menu-3 ul li, #lista-menu-4 ul li, #lista-menu-5 ul li, #lista-menu-6 ul li, #lista-menu-7 ul li, #lista-menu-8 ul li{
+#lista-menu ul li, #lista-menu-2 ul li, #lista-menu-3 ul li, #lista-menu-4 ul li, #lista-menu-5 ul li, #lista-menu-6 ul li, #lista-menu-7 ul li, #lista-menu-8 ul li, #lista-menu-9 ul li{
 	list-style-type: none;
 	display: inline;
 	text-decoration: none;
 	margin: 30px;
 }
-#lista-menu a, #lista-menu-2 a, #lista-menu-3 a, #lista-menu-4 a, #lista-menu-5 a, #lista-menu-6 a, #lista-menu-7 a, #lista-menu-8 a{
+#lista-menu a, #lista-menu-2 a, #lista-menu-3 a, #lista-menu-4 a, #lista-menu-5 a, #lista-menu-6 a, #lista-menu-7 a, #lista-menu-8 a, #lista-menu-9 a{
 	color: white;
 }
 .container-sportstibia{
